test/typecheck/errors/re-decl-var2.boa
a: array of int;
foreach (i: int; a[i] > 0)
	foreach (i: int; a[i] > 0) {
	}
